tests/expectations/compiler/finalize/rand_incorrect_num_operands.out
Error [ETYC0372006]: Call expected `0` args, but got `1`
    --> compiler-test:10:20
     |
  10 |     let a: field = ChaCha::rand_field(1field);
     |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `0` args, but got `2`
    --> compiler-test:11:20
     |
  11 |     let b: field = ChaCha::rand_field(1field, 2field);
     |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
